--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -39,17 +39,20 @@
         object-fit: cover;
     }
     .card-name h5 {
-        margin-left: 5%;
-        margin-bottom: 0;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         width: 90%;
     }
     .card-price p {
-        margin-left: 5%;
         text-align: left;
-        color: rgb(90, 90, 90);
+        color: rgb(55, 55, 55);
+    }
+    .card-description p {
+        line-height: 1.5em;
+        height: 3em;
+        overflow: hidden;
+        text-align: left;
     }
     </style>
 </head>
@@ -77,26 +80,40 @@
             <a href="https://www.amazon.com/Womens-Summer-Dresses-Hollow-Long-Sleeve/dp/B0B7RHC3V1" class="card-link">
                 <img id="image" src="../../img/dress.jpg" alt="Card Image" class="card-img-top">
             </a>
-            <div class="card-info">
+            <div class="card-body">
                 <div class="card-name">
-                    <h6>Women's Summer Dress</h6>
+                    <h5>Women's Summer Dress</h5>
                 </div>
                 <div class="card-price">
-                    <p>$16.00</p>
+                    <p>$16</p>
                 </div>
+                <div class="card-description">
+                    <p>This is a dress. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="card-text">
+                    <p>Brand: Amazon Essentials</p>
+                </div>
+                <button type="button" class="btn btn-success">Add to Closet</button>
             </div>
         </div>
         <div class="card">
             <a href="https://www.amazon.com/Button-Double-Breasted-Business-Wedding/dp/B09VGM1P55" class="card-link">
                 <img id="image" src="../../img/suit.jpg" alt="Card Image" class="card-img-top">
             </a>
-            <div class="card-info">
+            <div class="card-body">
                 <div class="card-name">
-                    <h6>Wangyue Mens Suit</h6>
+                    <h5>Wangyue Mens Suit</h5>
                 </div>
                 <div class="card-price">
-                    <p>$66.00</p>
+                    <p>$66</p>
                 </div>
+                <div class="card-description">
+                    <p>This is a suit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="card-text">
+                    <p>Brand: Amazon Essentials</p>
+                </div>
+                <button type="button" class="btn btn-success">Add to Closet</button>
             </div>
         </div>
         <div class="card">Outfit</div>
